--- a/app/main.css
+++ b/app/main.css
@@ -39,7 +39,6 @@ table th {
   flex-direction: column;
   width: 100%;
   height: 100%;
-  max-width: 50em;
   margin: 0 auto;
   background: #fff;
 }
@@ -59,8 +58,15 @@ table th {
 
 #app > main {
   flex: 1 1 auto;
-  padding: 1em;
   background: #fff;
+  display: flex;
+}
+
+#app #canvas {
+  flex: 1 1 auto;
+  width: 100%;
+  height: 100%;
+  border: 1px solid red;
 }
 
 /*# sourceMappingURL=main.css.map */
