--- a/src/main.scss
+++ b/src/main.scss
@@ -52,7 +52,6 @@ table {
   flex-direction: column;
   width: 100%;
   height: 100%;
-  max-width: 50em;
   margin: 0 auto;
   background: $white;
 }
@@ -72,6 +71,13 @@ table {
 
 #app > main {
   flex: 1 1 auto;
-  padding: 1em;
   background: $white;
+  display: flex;
+}
+
+#app #canvas {
+  flex: 1 1 auto;
+  width: 100%;
+  height: 100%;
+  border: 1px solid red;
 }
