--- a/app/main.css
+++ b/app/main.css
@@ -57,16 +57,20 @@ table th {
 }
 
 #app > main {
-  flex: 1 1 auto;
   background: #fff;
   display: flex;
-}
-
-#app #canvas {
   flex: 1 1 auto;
-  width: 100%;
-  height: 100%;
-  border: 1px solid red;
+  flex-direction: column;
+}
+#app > main #canvas {
+  flex: 0 0 auto;
+  display: block;
+  margin: 0 auto;
+  max-width: 100vw;
+  max-height: 100vh;
+  cursor: pointer;
+  user-select: none;
+  touch-action: none;
 }
 
 /*# sourceMappingURL=main.css.map */
