--- a/src/main.scss
+++ b/src/main.scss
@@ -70,14 +70,19 @@ table {
 }
 
 #app > main {
-  flex: 1 1 auto;
   background: $white;
   display: flex;
-}
-
-#app #canvas {
   flex: 1 1 auto;
-  width: 100%;
-  height: 100%;
-  border: 1px solid red;
+  flex-direction: column;
+
+  #canvas {
+    flex: 0 0 auto;
+    display: block;
+    margin: 0 auto;
+    max-width: 100vw;
+    max-height: 100vh;
+    cursor: pointer;
+    user-select: none;
+    touch-action: none;
+  }
 }
