--- a/app/main.css
+++ b/app/main.css
@@ -15,6 +15,7 @@ body {
   margin: 0;
   width: 100%;
   height: 100%;
+  overflow: hidden;
 }
 
 a {
@@ -45,8 +46,9 @@ table th {
 
 #app > header,
 #app > footer {
+  font-size: 0.5rem;
   flex: 0 0 auto;
-  padding: 1em;
+  padding: 0.5rem;
   background: #c44;
   color: #eee;
 }
@@ -67,7 +69,7 @@ table th {
   display: block;
   margin: 0 auto;
   max-width: 100vw;
-  max-height: 100vh;
+  max-height: 80vh;
   cursor: pointer;
   user-select: none;
   touch-action: none;
