--- a/src/main.scss
+++ b/src/main.scss
@@ -26,6 +26,7 @@ body {
   margin: 0;
   width: 100%;
   height: 100%;
+  overflow: hidden;
 }
 
 a {
@@ -58,8 +59,9 @@ table {
 
 #app > header,
 #app > footer {
+  font-size: 0.5rem;
   flex: 0 0 auto;
-  padding: 1em;
+  padding: 0.5rem;
   background: $primary;
   color: $light;
 
@@ -80,7 +82,7 @@ table {
     display: block;
     margin: 0 auto;
     max-width: 100vw;
-    max-height: 100vh;
+    max-height: 80vh;
     cursor: pointer;
     user-select: none;
     touch-action: none;
